DNS failover and HttpClient API with all resilient feature (#20)
* Implement DNS failover
* Provide an HttpClient wrapper to automatically retry on connection error
* builder creation should be done in the HttpClientPool
* Avoid duplicated for default of HttpClientPoolBuilder
* Handle connect exception like connect timeout exception