@@ -1,6 +1,5 @@
 package com.github.nhenneaux.resilienthttpclient.monitoredclientpool;
 
-import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
@@ -26,9 +25,7 @@ class RoundRobinPool {
      * @param list a list of service instance.
      */
     RoundRobinPool(final List<SingleIpHttpClient> list) {
-        final List<SingleIpHttpClient> copiedList = new ArrayList<>(list);
-        Collections.shuffle(copiedList);
-        this.list = Collections.unmodifiableList(copiedList);
+        this.list = List.copyOf(list);
     }
 
 
